<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.minyaneto_android.fragments.synagogue_details_fragments.SynagogueDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:padding="@dimen/text_margin"
            android:weightSum="0.8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synagogoe_details_title"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/synagogoe_details_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:hint="@string/enter_name_synagogue" />

            <TextView
                android:id="@+id/synagogoe_details_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:hint="@string/enter_address_synagogue" />

            <TextView
                android:id="@+id/add_synagogue_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"

                android:hint="@string/enter_comment_synagogue" />

            <TextView
                android:id="@+id/synagogoe_details_nosach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/synagogoe_details_accessible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:clickable="false"
                android:text="@string/accessible" />

            <CheckBox
                android:id="@+id/synagogoe_details_sefer_tora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:clickable="false"

                android:text="@string/sefer_tora" />

            <CheckBox
                android:id="@+id/synagogoe_details_parking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="0.1"
                android:clickable="false"
                android:text="@string/parking" />

            <CheckBox
                android:id="@+id/synagogoe_details_lessons"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:clickable="false"
                android:text="@string/lessons" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minyans_list" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/synagogoe_details_recycler_minyans"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center" />

        <Button
            android:id="@+id/synagogoe_details_add_minyan"
            android:layout_width="wrap_content"
            android:text="@string/add_minyan"
            android:layout_height="wrap_content" />

    </LinearLayout>
</FrameLayout>
