<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_synagogue_nosach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="חבד" />

        <TextView
            android:id="@+id/info_synagogue_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nosach_tfila"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/info_synagogue_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="------------------" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/info_synagogue_sefer_tora"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_bible_off" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sefer_tora"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/info_synagogue_wheelchair_accessible"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_handycap_off" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/accessible"

                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/info_synagogue_parking"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_parking_off"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/parking"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/info_synagogue_classes"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_lesson_off"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lessons"


                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>

